


<resources>
    <string name="app_name">Prestação de Contas</string>
    <string name="configuracao">Configuração</string>
    <string name="Item">Item: </string>
    <string name="Valor">Valor: </string>
    <string name="ItemHint">Item</string>
    <string name="ValorHint">Valor</string>
    <string name="Salvar">Salvar</string>
    <string name="Verificar">Verifica</string>
    <string name="editarMenu">Editar</string>
    <string name="Cancelar">Cancelar</string>
    <string name="Deletar">Deletar</string>
    <string name="Opcoes">Opções</string>
    <string name="sobre">Sobre</string>
    <string name="sobre_descrito">App desolvido para controle de gastos  de maneira simplificada.
        \nInsere os dados e permite editar o valor inserido ou deletar o mesmo.
        \nDesenvolvido por Carlos D. A. Arcos. © 2016 </string>
    <string name="valorGastar">Valor Máximo a Gastar</string>
    <string name="valorGastarHint">Valor MÃXIMO para Gastar</string>

</resources>
