<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <LinearLayout
        android:id="@+id/PrimeiroLinear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:layout_centerInParent="true">

        <TextView
            android:id="@+id/txtItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Item"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/etxtItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ItemHint" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/SegundoLinear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/PrimeiroLinear"
        android:gravity="center_horizontal"
        android:layout_centerHorizontal="true"
        >

        <TextView
            android:id="@+id/txtValor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Valor"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/etxtValor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ValorHint" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/SegundoLinear"
        android:layout_centerHorizontal="true"
        android:id="@+id/TerceiroLinear">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Salvar"
            android:id="@+id/btnSalvar"
            android:layout_gravity="center_horizontal"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnVerificar"
            android:text="@string/Verificar"/>

    </LinearLayout>

</RelativeLayout>